crates/pyprojx/tests/snapshots/check__reports_project_problems_with_labels.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error[invalid-dynamic]: `version` is set statically and also listed in `project.dynamic`
 --> pyproject.toml:3:1
  |
3 | version = "0.1.0"
  | ^^^^^^^
4 | dynamic = ["version"]
  |            --------- listed in `dynamic` here
  |
  = help: remove `version` from `dynamic` or remove its static value

error[unknown-key]: unknown key `requires_python` in `[project]`
 --> pyproject.toml:5:1
  |
5 | requires_python = ">=3.11"
  | ^^^^^^^^^^^^^^^
  |
  = help: did you mean `requires-python`?

Found 2 errors.

----- stderr -----
