crates/pyprojx/tests/snapshots/check__reports_ruff_rule_selector_problems.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error[invalid-value]: unknown rule selector `E5O1`
 --> pyproject.toml:5:16
  |
5 | select = ["E", "E5O1", "ANN101", "PLR1701", "AIR003"]
  |                ^^^^^^
  |
  = help: did you mean `E501`?
  = note: checked against Ruff 0.16.8, which the project's requirements allow

error[unsupported-feature]: no Ruff version the project allows supports the rule selector `ANN101`
 --> pyproject.toml:5:24
  |
2 | dev = ["ruff==0.16.8"]
  |        -------------- allows only versions without it
...
5 | select = ["E", "E5O1", "ANN101", "PLR1701", "AIR003"]
  |                        ^^^^^^^^
  |
  = help: Ruff removed it in 0.8.0
  = note: checked against Ruff 0.16.8, which the project's requirements allow

warning[deprecated-setting]: Ruff remaps the rule code `PLR1701` to `SIM101`
 --> pyproject.toml:5:34
  |
5 | select = ["E", "E5O1", "ANN101", "PLR1701", "AIR003"]
  |                                  ^^^^^^^^^
  |
  = help: use `SIM101`
  = note: checked against Ruff 0.16.8, which the project's requirements allow

warning[ineffective-setting]: `AIR003` selects only preview rules, so it has no effect without preview
 --> pyproject.toml:5:45
  |
5 | select = ["E", "E5O1", "ANN101", "PLR1701", "AIR003"]
  |                                             ^^^^^^^^
  |
  = help: set `preview = true` in `[tool.ruff.lint]` to enable them
  = note: checked against Ruff 0.16.8, which the project's requirements allow

warning[ineffective-setting]: Ruff removed the rule `ANN102` in 0.8.0, so this has no effect
 --> pyproject.toml:6:11
  |
6 | ignore = ["ANN102"]
  |           ^^^^^^^^
  |
  = help: remove it
  = note: checked against Ruff 0.16.8, which the project's requirements allow

Found 2 errors and 3 warnings.

----- stderr -----
