crates/pyprojx/tests/snapshots/check__shows_unsafe_fixes_as_a_diff_on_request.snap
---
source: crates/pyprojx/tests/check.rs
info:
  program: pyprojx
  args:
    - check
    - "--diff"
    - "--unsafe-fixes"
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
--- pyproject.toml
+++ pyproject.toml
@@ -1,35 +1,34 @@
-﻿[project]
+[project]
 name = "demo"
 version = "0.1.0"
-descripton = "A demo"
+description = "A demo"
 dependencies = ["idna"]
 
 [dependency-groups]
 dev = ["ruff==0.16.8", "ty==0.0.83"]
 
 [tool.ruff]
-line-lenght = 88
+line-length = 88
 # Linter settings
-select = ["E", "PLR1701", "E5O1"]  # keep
-ignore = [
-  "ANN101",  # removed
+lint.select = ["E", "SIM101", "E501"]  # keep
+lint.ignore = [
   "E501",
 ]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["demo"]
 
 [tool.ty.analysis]
-strict-literal-narrowing = true
+strict-equality-semantics = true
 
 [tool.ty.rules]
-unresolved-imprt = "error"
+unresolved-import = "error"
 
 [tool.uv]
 required-version = ">=0.9"
 
 [tool.uv.sources]
-idna = { index = "internl" }
+idna = { index = "internal" }
 
 [[tool.uv.index]]
 name = "internal"

----- stderr -----
Would fix 10 problems.
